Revisor/PCSFC - Small fixes + added options

--- a/revisor/revisorEngine/revisorEngine-pcsfc/pcsfc.properties
+++ b/revisor/revisorEngine/revisorEngine-pcsfc/pcsfc.properties
@@ -1,2 +1,5 @@
-#Tue May 21 12:15:08 CEST 2019
+#This tab contains the settings used by the console mode of Revisor/PCSFC
+#Tue May 21 14:56:48 CEST 2019
+[Boolean]Display_variables_content=true
+[Boolean]Display_formulas_converted_to_PCLC_before_revision=false
 [Integer]Instruction_timeout_(in_sec)=60
