Revisor/PCSFC - toPCSFC() method added ; updated GUI

--- a/revisor/revisorEngine/revisorEngine-pcsfc/pcsfc.properties
+++ b/revisor/revisorEngine/revisorEngine-pcsfc/pcsfc.properties
@@ -1,5 +1,6 @@
 #This tab contains the settings used by the console mode of Revisor/PCSFC
-#Tue May 21 14:56:48 CEST 2019
+#Fri May 24 11:47:23 CEST 2019
 [Boolean]Display_variables_content=true
 [Boolean]Display_formulas_converted_to_PCLC_before_revision=false
+[Boolean]Convert_revised_formula_to_PCSFC=false
 [Integer]Instruction_timeout_(in_sec)=60
